feat: add user word endpoints
