# src/resources/words/word.router.js
@@ -1,5 +1,6 @@
 const router = require('express').Router();
 const WordsModel = require('./word.model');
+const UserWordsModel = require('./userWord.model');
 const wrapAsync = require('../../utils/wrapAsync');
 const { MAX_PER_PAGE, PER_PAGE } = require('../../common/config');
 const { BadRequest } = require('../../errors/appErrors');
@@ -38,6 +39,68 @@ router.route('/count').get(
         res.status(200).send({ count });
       } else {
         throw err;
+      }
+    });
+  })
+);
+
+router.route('/:id').get(
+  wrapAsync(async (req, res) => {
+    const userId = req.query.userId;
+    const wordId = req.params.id;
+
+    if (!userId) {
+      throw new BadRequest('A user id should be specified');
+    }
+
+    await UserWordsModel.findOne({ wordId, userId }, (err, docs) => {
+      if (err) {
+        throw err;
+      } else {
+        console.log(docs);
+        res.status(200).send(docs);
+      }
+    });
+  })
+);
+
+router.route('/:id').put(
+  wrapAsync(async (req, res) => {
+    const userId = req.query.userId;
+    const wordId = req.params.id;
+
+    if (!userId) {
+      throw new BadRequest('A user id should be specified');
+    }
+
+    UserWordsModel.findOneAndUpdate(
+      { wordId, userId },
+      { $set: req.body },
+      (err, docs) => {
+        if (err) {
+          throw err;
+        } else {
+          res.status(200).send(docs);
+        }
+      }
+    );
+  })
+);
+
+router.route('/:id').delete(
+  wrapAsync(async (req, res) => {
+    const userId = req.query.userId;
+    const wordId = req.params.id;
+
+    if (!userId) {
+      throw new BadRequest('A user id should be specified');
+    }
+
+    UserWordsModel.findByIdAndRemove({ wordId, userId }, err => {
+      if (err) {
+        throw err;
+      } else {
+        res.status(200).send('Successfully deleted');
       }
     });
   })
